crates/php-parser/tests/snapshots/heredoc_nowdoc_tests__heredoc_empty.snap
---
source: tests/heredoc_nowdoc_tests.rs
assertion_line: 62
expression: program
---
Program {
    statements: [
        Nop {
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 11,
                    },
                    span: Span {
                        start: 6,
                        end: 11,
                    },
                },
                expr: InterpolatedString {
                    parts: [],
                    span: Span {
                        start: 14,
                        end: 24,
                    },
                },
                span: Span {
                    start: 6,
                    end: 24,
                },
            },
            span: Span {
                start: 6,
                end: 26,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 0,
        end: 26,
    },
}
