crates/php-parser/tests/snapshots/heredoc_nowdoc_tests__heredoc_in_function_call.snap
---
source: tests/heredoc_nowdoc_tests.rs
assertion_line: 96
expression: program
---
Program {
    statements: [
        Nop {
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Echo {
            exprs: [
                InterpolatedString {
                    parts: [
                        String {
                            value: [
                                72,
                                101,
                                108,
                                108,
                                111,
                                32,
                                87,
                                111,
                                114,
                                108,
                                100,
                                10,
                            ],
                            span: Span {
                                start: 18,
                                end: 30,
                            },
                        },
                    ],
                    span: Span {
                        start: 11,
                        end: 33,
                    },
                },
            ],
            span: Span {
                start: 6,
                end: 35,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 0,
        end: 35,
    },
}
